# observado

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
data/: basic.json
data/features/: basic.csv
observado/: analyze.py  chords.py  generate.py  hmm.py  midi.py
observado/lib/: chords.py  midi.py  utils.py
src/: analyze.py  chords.py  generate.py  main.py  midi.py  utils.py
tests/: test_chords.py  test_midi.py  test_utils.py
ui/: chorddata.cpp  chorddata.h  core.cpp  core.h  main.cpp  mainwindow.cpp  mainwindow.h  mediawidget.cpp  mediawidget.h
